--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -143,6 +143,7 @@ add_executable(check_states_node src/check_states.cpp)
 add_executable(ambil_data_node src/ambil_data.cpp)
 add_executable(transform_test_node src/transform_test.cpp)
 add_executable(control_playground_node src/control_playground.cpp)
+add_executable(my_manipulation_node src/my_manipulation.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -168,6 +169,9 @@ target_link_libraries(transform_test_node
 ${catkin_LIBRARIES}
 )
 target_link_libraries(control_playground_node
+${catkin_LIBRARIES}
+)
+target_link_libraries(my_manipulation_node
 ${catkin_LIBRARIES}
 )
 
