garap synching belum selesai

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ add_executable(transform_test_node src/transform_test.cpp)
 add_executable(control_playground_node src/control_playground.cpp)
 add_executable(my_manipulation_node src/my_manipulation.cpp)
 add_executable(test_load_param_node src/test_load_param.cpp)
+add_executable(test_comm_arm_node src/test_comm_arm.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -176,6 +177,9 @@ target_link_libraries(my_manipulation_node
 ${catkin_LIBRARIES}
 )
 target_link_libraries(test_load_param_node
+${catkin_LIBRARIES}
+)
+target_link_libraries(test_comm_arm_node
 ${catkin_LIBRARIES}
 )
 
