ada beberapa yg harus di fix

--- a/config/poses.yaml
+++ b/config/poses.yaml
@@ -190,3 +190,53 @@ home_left_pose:
     #     [0.0199083, -0.999801, 0.00113116]
     #     [0.998191, 0.0199404, 0.0567156]
     #     [-0.0567268, -6.93889e-18, 0.99839]
+
+place_object_pose:
+    joint_states:
+        joint1: 1.549321
+        joint2: 0.412641
+        joint3: 0.655010
+        joint4: -1.041573
+    position :
+        x: 0.017563
+        y: 0.259006
+        z: 0.072213
+    quaternion :
+        x: -0.009120
+        y: 0.009318
+        z: 0.699414
+        w: 0.714598
+    euler :
+        roll: -0.000000
+        pitch: 0.026078
+        yaw: 1.549321
+    # Matrix Rotation :
+    #     [0.0214667, -0.999769, 0.000559929]
+    #     [0.999429, 0.021474, 0.0260687]
+    #     [-0.0260748, -2.60209e-17, 0.99966]
+
+after_place_pose:
+    joint_states:
+        joint1: 1.549321
+        joint2: 0.042951
+        joint3: 0.179476
+        joint4: -0.641204
+    position :
+        x: 0.017702
+        y: 0.265470
+        z: 0.227234
+    quaternion :
+        x: 0.145394
+        y: -0.148550
+        z: 0.684196
+        w: 0.699049
+    euler :
+        roll: -0.000000
+        pitch: -0.418777
+        yaw: 1.549321
+    # Matrix Rotation :
+    #     [0.0196183, -0.999769, -0.00873225]
+    #     [0.913376, 0.021474, -0.406549]
+    #     [0.406643, -5.55112e-17, 0.913587]
+
+
