alhamdulillah ganti kekanan, tambah log, dan kurangi delay di program manipulasi aman

--- a/config/poses.yaml
+++ b/config/poses.yaml
@@ -70,31 +70,7 @@ save_pose:
     #     [0.00153394, 0.999999, 1.17653e-05]
     #     [-0.00766979, -4.40457e-20, 0.999971]
 
-find_object_pose:
-    joint_states:
-        joint1: 1.497165
-        joint2: -0.948000
-        joint3: 0.039884
-        joint4: 1.784020
-    position :
-        x: 0.016929
-        y: 0.066817
-        z: 0.171629
-    quaternion :
-        x: -0.288633
-        y: 0.310708
-        z: 0.616367
-        w: 0.663508
-    euler :
-        roll: 0.000000
-        pitch: 0.875903
-        yaw: 1.497165
-    # Matrix Rotation :
-    #     [0.0471036, -0.99729, 0.0565065]
-    #     [0.638569, 0.0735645, 0.766041]
-    #     [-0.768122, 0, 0.640303]
-
-find_object_pose_new:
+find_object_left_pose:
     joint_states:
         joint1: 1.569262
         joint2: -0.645806
@@ -118,8 +94,31 @@ find_object_pose_new:
     #     [0.695074, 0.00153394, 0.718936]
     #     [-0.718937, 0, 0.695075]
 
+find_object_right_pose:
+    joint_states:
+        joint1: -1.580000
+        joint2: -0.645806
+        joint3: -0.464796
+        joint4: 1.938952
+    position :
+        x: 0.011242
+        y: -0.082386
+        z: 0.211428
+    quaternion :
+        x: 0.285871
+        y: 0.283252
+        z: -0.650292
+        w: 0.644334
+    euler :
+        roll: 0.000000
+        pitch: 0.828350
+        yaw: -1.580000
+    # Matrix Rotation :
+    #     [-0.00622264, 0.999958, -0.00678153]
+    #     [-0.676064, -0.00920382, -0.736785]
+    #     [-0.736817, 5.55112e-17, 0.676093]
 
-before_grasp_pose:
+before_grasp_left_pose:
     joint_states:
         joint1: 1.570796
         joint2: -0.541495
@@ -142,6 +141,30 @@ before_grasp_pose:
     #     [-3.04309e-08, -1, -3.13791e-08]
     #     [0.696177, -4.37114e-08, 0.71787]
     #     [-0.71787, -1.11022e-16, 0.696177]
+
+before_grasp_right_pose:
+    joint_states:
+        joint1: -1.552389
+        joint2: -0.342078
+        joint3: -0.116583
+        joint4: 1.148952
+    position :
+        x: 0.015461
+        y: -0.187978
+        z: 0.179803
+    quaternion :
+        x: 0.237026
+        y: 0.241430
+        z: -0.659254
+        w: 0.671502
+    euler :
+        roll: -0.000000
+        pitch: 0.690291
+        yaw: -1.552389
+    # Matrix Rotation :
+    #     [0.0141927, 0.999831, 0.0117207]
+    #     [-0.77093, 0.0184067, -0.636654]
+    #     [-0.636762, -5.55112e-17, 0.771061]
 
 init_left_pose:
     joint_states:
@@ -167,6 +190,31 @@ init_left_pose:
     #     [0.997561, 0.0230076, 0.0658959]
     #     [-0.0659134, -6.93889e-18, 0.997825]
 
+init_right_pose:
+    joint_states:
+        joint1: -1.552389
+        joint2: 0.012272
+        joint3: 0.033748
+        joint4: 0.009204
+    position :
+        x: 0.017066
+        y: -0.275199
+        z: 0.191537
+    quaternion :
+        x: 0.019341
+        y: 0.019701
+        z: -0.700302
+        w: 0.713313
+    euler :
+        roll: -0.000000
+        pitch: 0.055223
+        yaw: -1.552389
+    # Matrix Rotation :
+    #     [0.0183787, 0.999831, 0.00101596]
+    #     [-0.998306, 0.0184067, -0.0551859]
+    #     [-0.0551952, -3.46945e-18, 0.998476]
+
+
 home_left_pose:
     joint_states:
         joint1: 1.550855
@@ -191,7 +239,54 @@ home_left_pose:
     #     [0.998191, 0.0199404, 0.0567156]
     #     [-0.0567268, -6.93889e-18, 0.99839]
 
-place_object_pose:
+home_right_pose:
+    joint_states:
+        joint1: -1.549321
+        joint2: -1.248660
+        joint3: 0.659612
+        joint4: 0.710233
+    position :
+        x: 0.014456
+        y: -0.114334
+        z: 0.193448
+    quaternion :
+        x: 0.042357
+        y: 0.043276
+        z: -0.698190
+        w: 0.713347
+    euler :
+        roll: -0.000000
+        pitch: 0.121184
+        yaw: -1.549321
+    # Matrix Rotation :
+    #     [0.0213165, 0.999769, 0.00259595]
+    #     [-0.992437, 0.021474, -0.12086]
+    #     [-0.120888, -3.46945e-17, 0.992666]
+    
+    # joint_states:
+    #     joint1: -1.552389
+    #     joint2: -1.046175
+    #     joint3: 0.357418
+    #     joint4: 0.710233
+    # position :
+    #     x: 0.014263
+    #     y: -0.122918
+    #     z: 0.237492
+    # quaternion :
+    #     x: 0.007522
+    #     y: 0.007662
+    #     z: -0.700528
+    #     w: 0.713544
+    # euler :
+    #     roll: -0.000000
+    #     pitch: 0.021476
+    #     yaw: -1.552389
+    # # Matrix Rotation :
+    # #     [0.0184025, 0.999831, 0.000395269]
+    # #     [-0.9996, 0.0184067, -0.0214705]
+    # #     [-0.0214741, -6.59195e-17, 0.999769]
+
+place_object_left_pose:
     joint_states:
         joint1: 1.549321
         joint2: 0.412641
@@ -215,7 +310,31 @@ place_object_pose:
     #     [0.999429, 0.021474, 0.0260687]
     #     [-0.0260748, -2.60209e-17, 0.99966]
 
-after_place_pose:
+place_object_right_pose:
+    joint_states:
+        joint1: -1.552389
+        joint2: 0.388097
+        joint3: 0.506214
+        joint4: -0.740913
+    position :
+        x: 0.017021
+        y: -0.272759
+        z: 0.069954
+    quaternion :
+        x: 0.053680
+        y: 0.054678
+        z: -0.698509
+        w: 0.711487
+    euler :
+        roll: -0.000000
+        pitch: 0.153398
+        yaw: -1.552389
+    # Matrix Rotation :
+    #     [0.0181906, 0.999831, 0.0028125]
+    #     [-0.98809, 0.0184067, -0.152771]
+    #     [-0.152797, -1.38778e-17, 0.988258]
+
+after_place_left_pose:
     joint_states:
         joint1: 1.549321
         joint2: 0.042951
@@ -239,4 +358,26 @@ after_place_pose:
     #     [0.913376, 0.021474, -0.406549]
     #     [0.406643, -5.55112e-17, 0.913587]
 
-
+after_place_right_pose:
+    joint_states:
+        joint1: -1.552389
+        joint2: -0.161068
+        joint3: 0.177942
+        joint4: -0.147262
+    position :
+        x: 0.016640
+        y: -0.252032
+        z: 0.220982
+    quaternion :
+        x: -0.045641
+        y: -0.046489
+        z: -0.699081
+        w: 0.712069
+    euler :
+        roll: 0.000000
+        pitch: -0.130388
+        yaw: -1.552389
+    # Matrix Rotation :
+    #     [0.0182505, 0.999831, -0.00239323]
+    #     [-0.991343, 0.0184067, 0.129997]
+    #     [0.130019, 1.38778e-17, 0.991511]
