--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,7 @@ add_executable(control_playground_node src/control_playground.cpp)
 add_executable(my_manipulation_node src/my_manipulation.cpp)
 add_executable(test_load_param_node src/test_load_param.cpp)
 add_executable(test_comm_arm_node src/test_comm_arm.cpp)
+add_executable(manipulation_only_node src/manipulation_only.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -180,6 +181,9 @@ target_link_libraries(test_load_param_node
 ${catkin_LIBRARIES}
 )
 target_link_libraries(test_comm_arm_node
+${catkin_LIBRARIES}
+)
+target_link_libraries(manipulation_only_node
 ${catkin_LIBRARIES}
 )
 
