tambah opsi kanan utk manipulation_only

--- a/config/poses.yaml
+++ b/config/poses.yaml
@@ -25,26 +25,49 @@ init_pose:
 home_pose:
     joint_states:
         joint1: 0.000000
-        joint2: -1.043107
-        joint3: 0.358952
-        joint4: 0.702563
+        joint2: -1.403592
+        joint3: 0.760854
+        joint4: 0.713301
     position :
-        x: 0.135569
+        x: 0.114723
         y: 0.000000
-        z: 0.237739
+        z: 0.186909
     quaternion :
         x: 0.000000
-        y: 0.009204
+        y: 0.035274
         z: 0.000000
-        w: 0.999958
+        w: 0.999378
     euler :
         roll: 0.000000
-        pitch: 0.018408
+        pitch: 0.070563
         yaw: 0.000000
     # Matrix Rotation :
-    #     [0.999831, 0, 0.0184068]
+    #     [0.997511, 0, 0.0705045]
     #     [0, 1, 0]
-    #     [-0.0184068, 0, 0.999831]
+    #     [-0.0705045, 0, 0.997511]
+    
+    # joint_states:
+    #     joint1: 0.000000
+    #     joint2: -1.043107
+    #     joint3: 0.358952
+    #     joint4: 0.702563
+    # position :
+    #     x: 0.135569
+    #     y: 0.000000
+    #     z: 0.237739
+    # quaternion :
+    #     x: 0.000000
+    #     y: 0.009204
+    #     z: 0.000000
+    #     w: 0.999958
+    # euler :
+    #     roll: 0.000000
+    #     pitch: 0.018408
+    #     yaw: 0.000000
+    # # Matrix Rotation :
+    # #     [0.999831, 0, 0.0184068]
+    # #     [0, 1, 0]
+    # #     [-0.0184068, 0, 0.999831]
 
 save_pose:
     joint_states:
@@ -217,27 +240,50 @@ init_right_pose:
 
 home_left_pose:
     joint_states:
-        joint1: 1.550855
-        joint2: -1.043107
-        joint3: 0.388097
-        joint4: 0.711767
+        joint1: 1.552389
+        joint2: -1.403592
+        joint3: 0.760854
+        joint4: 0.713301
     position :
-        x: 0.014505
-        y: 0.125606
-        z: 0.230077
+        x: 0.013891
+        y: 0.102705
+        z: 0.186909
     quaternion :
-        x: -0.019863
-        y: 0.020263
-        z: 0.699739
-        w: 0.713834
+        x: -0.024712
+        y: 0.025171
+        z: 0.700133
+        w: 0.713141
     euler :
         roll: -0.000000
-        pitch: 0.056757
-        yaw: 1.550855
+        pitch: 0.070563
+        yaw: 1.552389
     # Matrix Rotation :
-    #     [0.0199083, -0.999801, 0.00113116]
-    #     [0.998191, 0.0199404, 0.0567156]
-    #     [-0.0567268, -6.93889e-18, 0.99839]
+    #     [0.0183609, -0.999831, 0.00129776]
+    #     [0.997342, 0.0184067, 0.0704926]
+    #     [-0.0705045, -6.93889e-18, 0.997511]
+
+    # joint_states:
+    #     joint1: 1.550855
+    #     joint2: -1.043107
+    #     joint3: 0.388097
+    #     joint4: 0.711767
+    # position :
+    #     x: 0.014505
+    #     y: 0.125606
+    #     z: 0.230077
+    # quaternion :
+    #     x: -0.019863
+    #     y: 0.020263
+    #     z: 0.699739
+    #     w: 0.713834
+    # euler :
+    #     roll: -0.000000
+    #     pitch: 0.056757
+    #     yaw: 1.550855
+    # # Matrix Rotation :
+    # #     [0.0199083, -0.999801, 0.00113116]
+    # #     [0.998191, 0.0199404, 0.0567156]
+    # #     [-0.0567268, -6.93889e-18, 0.99839]
 
 home_right_pose:
     joint_states:
