modify manipulation_only and poses

--- a/config/poses.yaml
+++ b/config/poses.yaml
@@ -165,6 +165,32 @@ before_grasp_left_pose:
     #     [0.696177, -4.37114e-08, 0.71787]
     #     [-0.71787, -1.11022e-16, 0.696177]
 
+before_grasp_left_pose_more_close:
+    joint_states:
+        joint1: 1.569262
+        joint2: 0.153398
+        joint3: -0.079767
+        joint4: 0.941864
+    position :
+        x: 0.012358
+        y: 0.233367
+        z: 0.083140
+    quaternion :
+        x: -0.343539
+        y: 0.344066
+        z: 0.617425
+        w: 0.618373
+    euler :
+        roll: -0.000000
+        pitch: 1.015495
+        yaw: 1.569262
+    # Matrix Rotation :
+    #     [0.000808692, -0.999999, 0.00130345]
+    #     [0.527198, 0.00153394, 0.849741]
+    #     [-0.849742, -1.11022e-16, 0.527199]
+
+
+
 before_grasp_right_pose:
     joint_states:
         joint1: -1.552389
@@ -240,23 +266,46 @@ init_right_pose:
 
 home_left_pose:
     joint_states:
-        joint1: 1.552389
-        joint2: -1.403592
-        joint3: 0.760854
-        joint4: 0.713301
+        joint1: 1.498699
+        joint2: -1.148952
+        joint3: 0.661146
+        joint4: 0.711767
     position :
-        x: 0.013891
-        y: 0.102705
-        z: 0.186909
+        x: 0.021036
+        y: 0.125112
+        z: 0.180939
     quaternion :
-        x: -0.024712
-        y: 0.025171
-        z: 0.700133
-        w: 0.713141
+        x: -0.076118
+        y: 0.081813
+        z: 0.676896
+        w: 0.727546
     euler :
-        roll: -0.000000
-        pitch: 0.070563
-        yaw: 1.552389
+        roll: 0.000000
+        pitch: 0.223961
+        yaw: 1.498699
+    # Matrix Rotation :
+    #     [0.0702355, -0.997402, 0.0159984]
+    #     [0.972492, 0.0720346, 0.221517]
+    #     [-0.222094, 2.77556e-17, 0.975025]
+
+    # joint_states:
+    #     joint1: 1.552389
+    #     joint2: -1.403592
+    #     joint3: 0.760854
+    #     joint4: 0.713301
+    # position :
+    #     x: 0.013891
+    #     y: 0.102705
+    #     z: 0.186909
+    # quaternion :
+    #     x: -0.024712
+    #     y: 0.025171
+    #     z: 0.700133
+    #     w: 0.713141
+    # euler :
+    #     roll: -0.000000
+    #     pitch: 0.070563
+    #     yaw: 1.552389
     # Matrix Rotation :
     #     [0.0183609, -0.999831, 0.00129776]
     #     [0.997342, 0.0184067, 0.0704926]
